<resources>

    <string name="app_name">Bible Verse Memorizer</string>
    <string name="icon_label">Verse Mem</string>
    
    <string name="exit_label">Exit</string>
    <string name="done_label">Done</string>
    <string name="help_label">Help</string>
    <string name="add_label">Add</string>
    <string name="rename_label">Rename</string>
    <string name="cancel_label">Cancel</string>
    <string name="back_label">Back to Menu</string>
    <string name="add_project_label">Add Project</string>
    <string name="add_verse_label">Add Verse</string>
    <string name="remove_label">Remove</string>
    <string name="success_label">Success!</string>
    <string name="fail_label">Fail</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="example_label">Example</string>
    <string name="init_label">Initialize</string>
    
    <string name="main_label">Menu</string>
    
    <string name="one_more_dialog_text1">You completed</string>
    <string name="one_more_dialog_text2">% of this verse.</string>
    <string name="one_more_dialog_text3">Do you want one more memorization in this method?</string>

    <string name="about_title">About This Bible Verse Memorizer</string>
    <string name="about_text">Bible Verse Memorization is a long-term project of students and faculties in Taylor University Department of Computer Science. The project started in the fall of 2010.</string>
    
    <string name="activity_chooser_title">Choose Method</string>
    <string name="activity_chooser_back_label">Another Verse</string>
    
    <string name="memorize_verse_label">Memorize Verse</string>
    <string name="memorize_project_label">My Project</string>
    
    <string name="review_label">Review Manager</string>
    
    <string name="first_letter_help_title">First Letter Introduction</string>
    <string name="first_letter_help_text">Select an alphabet written as a first letter of missing words in order.</string>
    <string name="first_letter_title">First Letter</string>

    <string name="locate_word_help_title">Locate Word Introduction</string>
    <string name="locate_word_help_text">You have to locate all the verse words in right position. Touch position where you think it is right in.</string>
    <string name="locate_word_title">Locate Word</string>
    <string name="locate_word_chance">Chance:</string>
    
    <string name="word_search_title">Word Search</string>
    
    <string name="verse_chooser_title">Choose a verse</string>
    <string name="verse_chooser_memorize_button">Memorize this Verse</string>
    <string name="verse_chooser_add_verse_toast_success">It is now added in this project</string>
    <string name="verse_chooser_add_verse_toast_fail">It is already in this project</string>
    
    <string name="setting_label">Setting</string>
    <string name="setting_init_title">Initialize App</string>
    <string name="setting_init_message">Do you want to initialize all your information in App?</string>
    
    <string name="setting_bible_edition_label">Bible Edition</string>
    <string name="setting_bible_edition_message">Do you want to change all your bible edition setting in App?</string>
    <string name="setting_bible_edition_current_edtion">Current Edtion:&#160;</string>
    
    <string name="setting_difficulty_label">Difficulty</string>
    
    <string name="project_list_label">Project List</string>
    <string name="project_list_add_dialog_name">Project Name&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="project_list_remove_dialog_message">Do you want to remove?</string>
    <string name="project_list_init_dialog_message">Do you want to initialize?</string>

    <string name="project_verse_back_button">Another Project</string>

</resources>