<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/main_memorize_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memorize_verse_label"
        android:textSize="24sp" />

    <Button
        android:id="@+id/main_project_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memorize_project_label"
        android:textSize="24sp" />

    <Button
        android:id="@+id/main_review_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review_label"
        android:textSize="24sp" />

    <Button
        android:id="@+id/main_setting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_label"
        android:textSize="24sp" />

    <Button
        android:id="@+id/main_exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_label"
        android:textSize="24sp" />

</LinearLayout>