<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/activity_chooser_verse_ref_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/activity_chooser_verse_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/activity_chooser_mfl_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_letter_title"
            android:textSize="24sp" />

        <Button
            android:id="@+id/activity_chooser_lw_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locate_word_title"
            android:textSize="24sp" />

        <Button
            android:id="@+id/activity_chooser_word_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/word_search_title"
            android:textSize="24sp" />

        <Button
            android:id="@+id/activity_chooser_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_chooser_back_label"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>