<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <kankan.wheel.widget.WheelView
            android:id="@+id/verse_chooser_wheel_book"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25" />

        <kankan.wheel.widget.WheelView
            android:id="@+id/verse_chooser_wheel_chapter"
            android:layout_width="67dp"
            android:layout_height="match_parent" />

        <kankan.wheel.widget.WheelView
            android:id="@+id/verse_chooser_wheel_verse"
            android:layout_width="52dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/verse_chooser_memorize_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verse_chooser_memorize_button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/verse_chooser_add_verse_to_project_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_verse_label"
            android:textSize="24sp" />

        <Button
            android:id="@+id/verse_chooser_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_label"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>